contracts/visual-scoring/1.0.0/README.md
# visual-scoring/1.0.0 — расчёт визуального соответствия

Неизменяемая версия. Числа этого каталога не меняются: правка любого веса,
допуска или порога требует нового каталога `1.1.0` или `2.0.0`.

## Зачем контракт существует отдельно от проверки

Reference pack `amd.online` завершился статусом `BLOCKED_SCORING_CONTRACT_MISSING`
и был прав: токены измерены, а правила, превращающего их в один процент, в
репозитории не было. Порог «80 %» встречался только в текстах заданий и ни в
одном versioned-документе.

Назначить веса и порог тем же заданием, которое затем по ним аттестуется, —
подгонка, а не измерение. Поэтому контракт написан до появления оценки
кандидата, его автор не является ни автором пакета, ни автором кандидата, и ни
одно число здесь не выведено из результатов PR #80 или PR #76.

## Что подаётся на вход

| Вход | Требование |
| --- | --- |
| reference pack | неизменяемый, с зафиксированным полным SHA коммита |
| candidate pack | тот же набор поверхностей и ширин |
| токены | `name`, `value`, `unit`, `surface`, `viewport`, `method`, `evidence` |
| исключения | объявлены до сравнения, с причиной и provenance |
| дайджесты снимков | записанные и заново наблюдаемые значения |
| environment manifest | обе стороны, полностью заполненный |

Токен без `method` или `evidence` не имеет provenance. Вручную вписанное
значение provenance не имеет по определению и вызывает hard-fail.

## Матрицы весов

Поверхности: `home` 25, `catalog` 20, `collection_hub` 20, `title` 25,
`not_found` 10.
Ширины: `390` 30, `768` 30, `1440` 40.
Компоненты: структура и порядок блоков 30, геометрия 30, типографика 15,
цвета и границы 10, карточки и медиа 10, отзывчивость 5.

Каждая матрица проверяется вычислительно на сумму 100 при загрузке. Опечатка в
числах валит загрузку, а не смещает оценку молча.

## Как считается балл

**Числовые параметры.** Относительное отклонение `|кандидат − эталон| / |эталон|`.
До 5 % включительно — 100 баллов. От 5 % до 25 % — линейное снижение
`100 × (0,25 − отклонение) / 0,20`. От 25 % — 0. Эталонный ноль не делится:
совпадение с нулём даёт 100, любое иное значение — 0.

**Цвета.** CIEDE2000 в пространстве CIELAB, осветитель D65, наблюдатель 2°.
Точное совпадение нормализованного hex или имени токена — 100 без вычислений.
ΔE00 до 1,0 — 100. От 1,0 до 5,0 — линейное снижение. От 5,0 — 0. Метрика
выбрана потому, что опубликована и воспроизводима; «похожий оттенок» входом
расчёта не является.

**Перечисления, флаги, наличие и порядок.** Совпадение — 100, иначе 0.

**Отсутствующее измерение.** 0, если оно не было исключено заранее.

**Лишний токен кандидата.** Не участвует в расчёте и не может поднять оценку.
Отсутствие исключённого элемента у эталона не даёт права его добавить.

## Агрегация

`токен → компонент → ячейка (surface × viewport) → surface → overall`.

Токены внутри компонента равновесны. Компонент в ячейку входит по весу
компонента, ячейки в surface — по весу ширины, surfaces в общий балл — по весу
поверхности. Порядок обхода задаётся сортировкой, а не порядком поступления.

Промежуточные значения не округляются: округление на каждом шаге копит ошибку и
итог перестаёт воспроизводиться. Округляется только отчётное значение — до двух
знаков, полубанковским правилом. **Пороги сравниваются с уже округлённым
отчётным значением**, чтобы отчёт не мог показать 80.00 при вердикте
«отклонено».

## Когда разрешена сертификация

`VISUAL_CERTIFIED` требует одновременно:

* overall ≥ 80.00;
* каждая обязательная поверхность ≥ 70.00;
* каждая ширина в агрегате ≥ 65.00;
* пустой список hard-fail;
* полнота evidence ровно 100 %;
* checker не совпадает с автором пакета;
* checker не совпадает с автором кандидата;
* выполнено хотя бы одно сравнение.

Ноль выполненных сравнений — не успех. Это отдельное правило, потому что пустой
прогон технически даёт «ошибок нет».

## Hard-fail

Сертификация запрещена независимо от среднего балла при: отсутствии
обязательной поверхности или ширины; расхождении дайджеста; измерении без
provenance; изменении evidence после начала проверки; появлении горизонтальной
прокрутки; отсутствии или недоступности обязательного блока; перекрытии
основного контента; совпадении checker с автором пакета или кандидата;
изменении контракта после просмотра результата; применении незаявленного
исключения.

## Исключения

Действительны только с полями `scope`, `reason`, `provenance`, `declared_at`.
До начала сравнения с них снимается `exclusions_digest`; расхождение потом
означает позднее исключение и даёт hard-fail. Дайджест не зависит от порядка
строк: перестановка тех же исключений — не подмена.

Динамический текст, реклама, трекеры и сторонние виджеты не оцениваются.

**Исключение целого компонента** допустимо и перераспределяет его вес
пропорционально между остальными компонентами той же ячейки; перераспределение
записывается в результат. **Компонент без единого эталонного токена и без
объявленного исключения не перераспределяется и не обнуляется молча**: он даёт
0 баллов и снижает полноту evidence, а это блокирует сертификацию статусом
`BLOCKED_EVIDENCE_INCOMPLETE`. Так пробел в пакете становится виден вместо того,
чтобы наказать кандидата за чужую недоработку или незаметно облегчить ему путь.

## Совместимость

Диапазон берётся только из доказанного манифеста, lockfile или конфигурации CI.
Недоказуемый диапазон закрепляется текущей проверенной версией; `any`, `latest`,
`*` и `pending` запрещены и отвергаются схемой результата.

| Параметр | Значение | Источник |
| --- | --- | --- |
| Playwright | `1.62.1` | `package.json`, `package-lock.json` |
| Chromium | `chromium-1234` | `@playwright/test 1.62.1` + `artifacts/evidence/env-report.json:77` |
| Python | `3.11` | `.github/workflows/ci.yml:17`, `deploy.yml:36` |
| DPR | `1` | `tests/tools/measure_reference.js:143` |
| Ширины | 390, 768, 1440; высота 844 при ширине < 500, иначе 1000 | `measure_reference.js:142` |
| Режим снимка | видимая область, `fullPage: false` | `measure_reference.js:152` |

Playwright закреплён точной версией, а не диапазоном: `package.json` содержит
`1.62.1` без оператора диапазона, доказать более широкую совместимость из
репозитория нечем.

Локаль, часовой пояс, набор шрифтов, политика анимаций и диапазоны
`apiVersionRange` / `sdkVersionRange` / `seoContractVersionRange` инструментом
замера не задаются и из репозитория недоказуемы. Поэтому они обязаны быть
объявлены в `environment_manifest` обеих сторон и совпасть. Расхождение —
`BLOCKED_COMPATIBILITY_MISMATCH`.

## Результат

Машиночитаемая форма — `schemas/visual-scoring-result.schema.json`.
Статусы и их приоритет: `BLOCKED_SCORING_CONTRACT_MISSING` →
`BLOCKED_INDEPENDENCE_VIOLATION` → `BLOCKED_COMPATIBILITY_MISMATCH` →
`BLOCKED_EVIDENCE_INCOMPLETE` → `VISUAL_REJECTED` → `VISUAL_CERTIFIED`.

## Как применять

```python
from factory.visual_scoring import Identity, compare, load_contract

contract = load_contract("1.0.0")
result = compare(
    reference_tokens=..., candidate_tokens=..., contract=contract,
    checker=Identity("checker-01", "INDEPENDENT_CHECKER"),
    pack_author=Identity("templates-01", "TEMPLATES"),
    candidate_author=Identity("candidate-01", "TEMPLATES_CANDIDATE"),
    reference_environment=..., candidate_environment=...,
    declared_exclusions=..., baseline_exclusions_digest=...,
    digest_checks=...,
)
```

Единая точка входа существует затем, чтобы независимый checker не собирал
расчёт заново: собранный вручную конвейер разойдётся с контрактом в мелочи, и
разойдётся в удобную сторону.

## Чего контракт не делает

Он не выносит вердикт по конкретному кандидату и не запускает проверку. Ни один
тест этой версии не использует данные пакета `amd.online`. Применение контракта
к PR #80 — задача `TEMPLATE-REFERENCE-PACK-AMD-ONLINE-CHECKER-02`, и её обязан
выполнить субъект, не являющийся автором ни пакета, ни кандидата, ни этого
контракта.

Известное следствие, зафиксированное заранее: пакет `amd.online` измеряет
геометрию, типографику, карточки и отзывчивость, но не измеряет цветовые
токены и не объявляет компонент `colors` исключённым. По правилу выше это даёт
`BLOCKED_EVIDENCE_INCOMPLETE` до тех пор, пока владелец пакета либо не добавит
цветовые измерения, либо не объявит исключение компонента с причиной и
provenance. Это следствие правила, а не оценка кандидата.
